[tool.poetry]
name = "recesser-tensorflow-example"
version = "0.1.0"
description = ""
authors = ["nikstur <nikstur@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.10"
matplotlib = "^3.5.1"
tensorflow-text = "2.8.*"
tf-models-official = "2.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
